fix overflow content

--- a/Car Shop Front-end/src/index.css
+++ b/Car Shop Front-end/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.img {
+  height: 45px;
+}
+
+@media only screen and (max-width: 600px) {
+  .img {
+    height: 35px;
+  }
+}
